--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "@testing-library/user-event": "^13.5.0",
     "@tippyjs/react": "^4.2.6",
     "axios": "^0.27.2",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^18.2.0",
-    "react-loader-spinner": "^5.1.7-beta.1",   
+    "react-loader-spinner": "^5.1.7-beta.1",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "5.0.1",    
-    "web-vitals": "^2.1.4"
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
