--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dark-mode-toggle": "^0.2.0",
     "react-dom": "^18.2.0",
     "react-loader-spinner": "^5.1.7-beta.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.0.2",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
